--- a/.github/workflows/test-backup.yml
+++ b/.github/workflows/test-backup.yml
@@ -24,8 +24,7 @@ jobs:
       - name: Login to Supabase
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-        run: |
-          echo "$SUPABASE_ACCESS_TOKEN" | supabase login --with-token
+        run: supabase login --token $SUPABASE_ACCESS_TOKEN
 
       - name: Link to Supabase Project
         env:
