--- a/.github/workflows/test-backup.yml
+++ b/.github/workflows/test-backup.yml
@@ -1,9 +1,9 @@
-name: Supabase Backup (IPv4 Forced)
+name: Supabase Backup (Working Version)
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * *" # Daily at midnight UTC
 
 jobs:
   backup:
@@ -14,13 +14,24 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install PostgreSQL Client
-        run: sudo apt-get install -y postgresql-client-15
+      # 1. Install correct PostgreSQL client version
+      - name: Add PostgreSQL Repository
+        run: |
+          sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
+          wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+          sudo apt-get update
 
-      - name: Create Backup Directory
-        run: mkdir -p backups
+      - name: Install PostgreSQL 14 Client (LTS)
+        run: sudo apt-get install -y postgresql-client-14
 
-      - name: Run pg_dump (Direct IPv4 Connection)
+      # 2. Force IPv4 connection
+      - name: Configure IPv4 Preference
+        run: |
+          echo "precedence ::ffff:0:0/96  100" | sudo tee -a /etc/gai.conf
+          sudo sysctl -w net.ipv6.conf.all.disable_ipv6=1
+
+      # 3. Create backup
+      - name: Run Backup
         env:
           PGHOST: db.YOUR_PROJECT_REF.supabase.co
           PGPORT: 5432
@@ -28,23 +39,24 @@ jobs:
           PGPASSWORD: ${{ secrets.DB_PASSWORD }}
           PGDATABASE: postgres
         run: |
-          # Force IPv4 by disabling IPv6 at system level
-          echo "precedence ::ffff:0:0/96  100" | sudo tee -a /etc/gai.conf
-          
           # Test connection
           psql -c "SELECT 1" || exit 1
           
-          # Perform backup
-          pg_dump -Fc -Z 9 -f "backups/dump_$(date +%Y%m%d).pgdump"
+          # Create timestamp
+          TIMESTAMP=$(date +"%Y%m%d_%H%M%S")
+          
+          # Perform backup (custom format with compression)
+          pg_dump -Fc -Z 6 -f "supabase_backup_$TIMESTAMP.pgdump"
           
           # Verify backup
-          if [ ! -s "backups/dump_$(date +%Y%m%d).pgdump" ]; then
+          if [ ! -s "supabase_backup_$TIMESTAMP.pgdump" ]; then
             echo "Backup failed - empty file!"
             exit 1
           fi
 
-      - name: Upload Artifact
+      # 4. Upload artifact
+      - name: Upload Backup
         uses: actions/upload-artifact@v4
         with:
-          name: db-backup
-          path: backups/*.pgdump
+          name: supabase-backup
+          path: *.pgdump
