--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,33 +1,20 @@
-name: Supabase Backup (Commit to Repo)
+name: Test Supabase Backup
 on:
-  schedule:
-    - cron: '0 2 * * *'  # Daily at 2 AM UTC
-  workflow_dispatch:      # Manual trigger
+  workflow_dispatch:  # Manual trigger only
 
 jobs:
-  backup:
+  backup-test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Needed to commit later
-
-      - name: Setup PostgreSQL
+      - name: Install PostgreSQL client
         run: sudo apt-get update && sudo apt-get install -y postgresql-client
 
-      - name: Dump Database
+      - name: Test connection and dump (without saving)
         run: |
           PGPASSWORD=${{ secrets.DB_PASSWORD }} pg_dump \
+            -h ${{ secrets.DB_PASSWORD }} pg_dump \
             -h ${{ secrets.DB_HOST }} \
             -U ${{ secrets.DB_USER }} \
             -d postgres \
-            -f backup.sql
-
-      - name: Commit Backup
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add backup.sql
-          git commit -m "chore: Auto-backup $(date +'%Y-%m-%d')"
-          git push
+            --file=/dev/null  # Dumps to void (no storage)
+          echo "✅ Backup successful! (Tested connection and pg_dump)"
