--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,24 +8,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Install and setup Cloudflare WARP
+      - name: Install Cloudflare WARP
         run: |
           curl -fsSL https://pkg.cloudflareclient.com/pubkey.gpg | sudo gpg --dearmor -o /usr/share/keyrings/cloudflare-warp-archive-keyring.gpg
           echo "deb [signed-by=/usr/share/keyrings/cloudflare-warp-archive-keyring.gpg] https://pkg.cloudflareclient.com/ jammy main" | sudo tee /etc/apt/sources.list.d/cloudflare-client.list
           sudo apt-get update
           sudo apt-get install -y cloudflare-warp
-          sudo systemctl start warp-svc
-          sudo warp-cli registration register
-          sudo warp-cli connect
-          sudo warp-cli status
-
-      - name: Install PostgreSQL client
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y postgresql-client
-
-      - name: Test connection to Supabase
-        env:
+      - name: Show warp-cli registration help
+        run: warp-cli registration --help
           PGPASSWORD: ${{ secrets.DB_PASSWORD }}
         run: |
           psql "host=${{ secrets.DB_HOST }} user=${{ secrets.DB_USER }} dbname=${{ secrets.DB_NAME }} sslmode=require" -c "\dt"
