--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,12 +1,11 @@
 name: Test Supabase Connection with WARP
 
 on:
-  workflow_dispatch:  # manual trigger
+  workflow_dispatch:
 
 jobs:
   test-connection:
     runs-on: ubuntu-latest
-
     steps:
       - name: Backup Supabase schema only
         env:
@@ -16,9 +15,12 @@ jobs:
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           DB_NAME: postgres
         run: |
+          echo "Starting schema backup..."
           PGPASSWORD=$DB_PASSWORD pg_dump \
             --host=$DB_HOST \
             --port=$DB_PORT \
             --username=$DB_USER \
             --dbname=$DB_NAME \
-            --schema-only > schema_backup_$(date +%s).sql
+            --schema-only \
+            --no-password > schema_backup_$(date +%s).sql
+          echo "Backup complete: schema_backup_$(date +%s).sql"
