--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,15 +4,25 @@ on:
   workflow_dispatch:
 
 jobs:
+  
   test-connection:
     runs-on: ubuntu-latest
     steps:
+      - name: Add PostgreSQL Apt Repository for v17
+        run: |
+          sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
+          wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+          sudo apt-get update
+
+      - name: Install PostgreSQL 17 client tools
+        run: sudo apt-get install -y postgresql-client-17
+
       - name: Backup Supabase schema only
         env:
           DB_HOST: aws-0-us-east-2.pooler.supabase.com
           DB_PORT: 5432
           DB_USER: postgres.mlrtlpatqeqchjmafqnm
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_PASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
           DB_NAME: postgres
         run: |
           echo "Starting schema backup..."
