--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,27 +2,35 @@ name: Backup Supabase Schema
 
 on:
   workflow_dispatch:
-
 jobs:
-  backup:
+  test-connection:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Add PostgreSQL Apt Repository for v17
+        run: |
+          sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
+          wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+          sudo apt-get update
 
-      - name: Create schema backup
+      - name: Install PostgreSQL 17 client tools
+        run: sudo apt-get install -y postgresql-client-17
+
+      - name: Backup Supabase schema only
         env:
           DB_HOST: aws-0-us-east-2.pooler.supabase.com
           DB_PORT: 5432
           DB_USER: postgres.mlrtlpatqeqchjmafqnm
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_PASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
           DB_NAME: postgres
         run: |
+          echo "Starting schema backup..."
           PGPASSWORD=$DB_PASSWORD pg_dump \
             --host=$DB_HOST \
             --port=$DB_PORT \
             --username=$DB_USER \
             --dbname=$DB_NAME \
-            --schema-only > schema_backup.sql
+            --schema-only \
+            --no-password > schema_backup_$(date +%s).sql
 
       - name: Commit and push backup
         run: |
@@ -37,3 +45,4 @@ jobs:
           git push origin HEAD:${GITHUB_REF#refs/heads/}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          echo "Backup complete: schema_backup_$(date +%s).sql"
