--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,7 +20,7 @@ jobs:
           DB_HOST: aws-0-us-east-2.pooler.supabase.com
           DB_PORT: 5432
           DB_USER: postgres.mlrtlpatqeqchjmafqnm
-          DB_PASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           DB_NAME: postgres
         run: |
           echo "Starting schema backup..."
