--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,13 +1,16 @@
 name: Backup Supabase Schema
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # manual trigger, add schedule if you want
+
 jobs:
-  test-connection:
+  backup-schema:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v4 
+        uses: actions/checkout@v4
+
       - name: Add PostgreSQL Apt Repository for v17
         run: |
           sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
@@ -26,13 +29,16 @@ jobs:
           DB_NAME: postgres
         run: |
           echo "Starting schema backup..."
+          mkdir -p Auto-Backup
+          TIMESTAMP=$(date +%s)
           PGPASSWORD=$DB_PASSWORD pg_dump \
             --host=$DB_HOST \
             --port=$DB_PORT \
             --username=$DB_USER \
             --dbname=$DB_NAME \
             --schema-only \
-            --no-password > schema_backup_$(date +%s).sql
+            --no-password > Auto-Backup/schema_backup_${TIMESTAMP}.sql
+          echo "Backup saved as Auto-Backup/schema_backup_${TIMESTAMP}.sql"
 
       - name: Commit and push backup
         env:
@@ -41,8 +47,9 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add schema_backup.sql
+          git add Auto-Backup/
+
+          # Commit only if there are changes
           git diff --cached --quiet || git commit -m "Automated schema backup $(date +'%Y-%m-%d %H:%M:%S')"
 
           git push origin HEAD:${GITHUB_REF#refs/heads/}
-          echo "Backup complete: schema_backup_$(date +%s).sql"
