--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,7 @@
 name: Backup Supabase Schema
 
 on:
-  workflow_dispatch:  # manual trigger, add schedule if you want
+  workflow_dispatch:
 
 jobs:
   backup-schema:
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Add PostgreSQL Apt Repository for v17
         run: |
@@ -28,7 +30,6 @@ jobs:
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           DB_NAME: postgres
         run: |
-          echo "Starting schema backup..."
           mkdir -p Auto-Backup
           TIMESTAMP=$(date +%s)
           PGPASSWORD=$DB_PASSWORD pg_dump \
@@ -37,8 +38,8 @@ jobs:
             --username=$DB_USER \
             --dbname=$DB_NAME \
             --schema-only \
-            --no-password > Auto-Backup/schema_backup_${TIMESTAMP}.sql
-          echo "Backup saved as Auto-Backup/schema_backup_${TIMESTAMP}.sql"
+            --no-password > Auto-Backup/schema_backup_$TIMESTAMP.sql
+          echo "Backup saved to Auto-Backup/schema_backup_$TIMESTAMP.sql"
 
       - name: Commit and push backup
         env:
@@ -46,10 +47,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-
-          git add Auto-Backup/
-
-          # Commit only if there are changes
+          git add Auto-Backup/schema_backup_*.sql
           git diff --cached --quiet || git commit -m "Automated schema backup $(date +'%Y-%m-%d %H:%M:%S')"
-
           git push origin HEAD:${GITHUB_REF#refs/heads/}
