--- a/.github/workflows/test-backup.yml
+++ b/.github/workflows/test-backup.yml
@@ -1,60 +1,55 @@
-name: Supabase Backup (Working Version)
+name: Backup Supabase Schema
+permissions:
+  contents: write
+
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 0 * * *" # Daily at midnight UTC
 
 jobs:
-  backup:
+  backup-schema:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
 
     steps:
-      - name: Checkout
+      - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      # 1. Install correct PostgreSQL client version
-      - name: Add PostgreSQL Repository
+      - name: Add PostgreSQL Apt Repository for v17
         run: |
-          sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
+          sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
           wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
           sudo apt-get update
 
-      - name: Install PostgreSQL 14 Client (LTS)
-        run: sudo apt-get install -y postgresql-client-14
+      - name: Install PostgreSQL 17 client tools
+        run: sudo apt-get install -y postgresql-client-17
 
-      # 2. Force IPv4 connection
-      - name: Configure IPv4 Preference
-        run: |
-          echo "precedence ::ffff:0:0/96  100" | sudo tee -a /etc/gai.conf
-          sudo sysctl -w net.ipv6.conf.all.disable_ipv6=1
-
-      # 3. Create backup
-      - name: Run Backup
+      - name: Backup Supabase schema only
         env:
-          PGHOST: db.mlrtlpatqeqchjmafqnm.supabase.co
-          PGPORT: 5432
-          PGUSER: postgres
-          PGPASSWORD: kSyZVPTQ8vo9Rt0n
-          PGDATABASE: postgres
+          DB_HOST: aws-0-us-east-2.pooler.supabase.com
+          DB_PORT: 5432
+          DB_USER: postgres.mlrtlpatqeqchjmafqnm
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_NAME: postgres
         run: |
-          # Test connection
-          psql -c "SELECT 1" || exit 1
-          
-          # Create timestamp
-          TIMESTAMP=$(date +"%Y%m%d_%H%M%S")
-          
-          # Perform backup (custom format with compression)
-          pg_dump -Fc -Z 6 -f "supabase_backup_$TIMESTAMP.pgdump"
-          
-          # Verify backup
-          if [ ! -s "supabase_backup_$TIMESTAMP.pgdump" ]; then
-            echo "Backup failed - empty file!"
-            exit 1
-          fi
+          mkdir -p Auto-Backup
+          TIMESTAMP=$(date +%s)
+          PGPASSWORD=$DB_PASSWORD pg_dump \
+            --host=$DB_HOST \
+            --port=$DB_PORT \
+            --username=$DB_USER \
+            --dbname=$DB_NAME \
+            --schema-only \
+            --no-password > Auto-Backup/schema_backup_$TIMESTAMP.sql
+          echo "Backup saved to Auto-Backup/schema_backup_$TIMESTAMP.sql"
 
-      # 4. Upload artifact
-      - name: Upload Backup
+      - name: Commit and push backup
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "Back--success"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add Auto-Backup/schema_backup_*.sql
+          git diff --cached --quiet || git commit -m "Automated schema backup $(date +'%Y-%m-%d %H:%M:%S')"
+          git push origin HEAD:${GITHUB_REF#refs/heads/}
